--- a/1_datetime_excel_.ipynb
+++ b/1_datetime_excel_.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 59,
    "id": "426abb53-c355-4796-9cb8-691a8dac4d45",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 61,
    "id": "99cfca91-23ee-41c3-ab20-16e890a1c1ca",
    "metadata": {},
    "outputs": [
@@ -81,7 +81,7 @@
        "4  13-12-2018 12:00   13-12-2018 12:00"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 63,
    "id": "178d7699-91db-451c-ac0b-b190ebfc16ce",
    "metadata": {},
    "outputs": [],
@@ -102,7 +102,101 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 65,
+   "id": "4f0dc2cd-0318-4b7d-a1bf-fd02ef5e1c7a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Monday,March 14,2022'"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['report_date_time_2'].loc[109]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "id": "c62740a6-9554-4047-bdc6-e0c24664b06b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Indexes with format 'Monday,March 14,2022': [109, 242, 5716, 6251]\n"
+     ]
+    }
+   ],
+   "source": [
+    "valid_days_of_week = ['Monday', 'Tuesday', 'Wednesday', 'Thursday', 'Friday', 'Saturday', 'Sunday']\n",
+    "valid_months = ['January', 'February', 'March', 'April', 'May', 'June', 'July', 'August', 'September', 'October', 'November', 'December']\n",
+    "\n",
+    "indexes = []\n",
+    "\n",
+    "for index, date_str in enumerate(df['report_date_time_2']):\n",
+    "    \n",
+    "    parts = date_str.split(',')\n",
+    "    \n",
+    "    if len(parts) == 3:\n",
+    "        day_of_week = parts[0]\n",
+    "        month_day = parts[1]\n",
+    "        year = parts[2]\n",
+    "        \n",
+    "        month_day_parts = month_day.split(' ')\n",
+    "        \n",
+    "        if len(month_day_parts) == 2:\n",
+    "            month = month_day_parts[0]\n",
+    "            day = month_day_parts[1]\n",
+    "            \n",
+    "            if (day_of_week in valid_days_of_week and\n",
+    "                month in valid_months and\n",
+    "                day.isdigit() and\n",
+    "                year.isdigit()):\n",
+    "                indexes.append(index)\n",
+    "\n",
+    "print(\"Indexes with format 'Monday,March 14,2022':\", indexes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "id": "8f00f5af-5341-4084-99b7-c74156bd837f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index with Diff Format: [109, 242, 5716, 6251]\n"
+     ]
+    }
+   ],
+   "source": [
+    "format = '%A,%B %d,%Y'\n",
+    "\n",
+    "index_values = []\n",
+    "\n",
+    "for index,date_str in enumerate(df['report_date_time_2']):\n",
+    "    try:\n",
+    "        datetime.strptime(date_str,format)\n",
+    "        index_values.append(index)\n",
+    "    except ValueError:\n",
+    "        pass\n",
+    "\n",
+    "print('Index with Diff Format:',index_values)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "id": "a45e42c3-88c0-4261-b27d-1c4f7fbe5086",
    "metadata": {},
    "outputs": [
@@ -176,7 +270,7 @@
        "4 2018-12-13 12:00:00   13-12-2018 12:00    13-Dec-2018"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -188,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "id": "d5b54b00-a71e-47b1-a25c-543b9cbb7c16",
    "metadata": {},
    "outputs": [
@@ -215,6 +309,7 @@
        "      <th></th>\n",
        "      <th>report_date_time</th>\n",
        "      <th>report_date_time_2</th>\n",
+       "      <th>formatted_date</th>\n",
        "      <th>Date</th>\n",
        "      <th>Time</th>\n",
        "      <th>Timetz</th>\n",
@@ -222,7 +317,6 @@
        "      <th>Day</th>\n",
        "      <th>Hour</th>\n",
        "      <th>Minute</th>\n",
-       "      <th>Second</th>\n",
        "      <th>...</th>\n",
        "      <th>is_year_end</th>\n",
        "      <th>is_leap_year</th>\n",
@@ -241,6 +335,7 @@
        "      <th>0</th>\n",
        "      <td>2018-01-02 19:48:00</td>\n",
        "      <td>02-01-2018 19:48</td>\n",
+       "      <td>02-Jan-2018</td>\n",
        "      <td>2018-01-02</td>\n",
        "      <td>19:48:00</td>\n",
        "      <td>19:48:00</td>\n",
@@ -248,7 +343,6 @@
        "      <td>2</td>\n",
        "      <td>19</td>\n",
        "      <td>48</td>\n",
-       "      <td>0</td>\n",
        "      <td>...</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
@@ -265,13 +359,13 @@
        "      <th>1</th>\n",
        "      <td>2018-02-14 12:00:00</td>\n",
        "      <td>14-02-2018 12:00</td>\n",
+       "      <td>14-Feb-2018</td>\n",
        "      <td>2018-02-14</td>\n",
        "      <td>12:00:00</td>\n",
        "      <td>12:00:00</td>\n",
        "      <td>2</td>\n",
        "      <td>14</td>\n",
        "      <td>12</td>\n",
-       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>...</td>\n",
        "      <td>False</td>\n",
@@ -289,6 +383,7 @@
        "      <th>2</th>\n",
        "      <td>2018-03-22 14:30:00</td>\n",
        "      <td>22-03-2018 14:30</td>\n",
+       "      <td>22-Mar-2018</td>\n",
        "      <td>2018-03-22</td>\n",
        "      <td>14:30:00</td>\n",
        "      <td>14:30:00</td>\n",
@@ -296,7 +391,6 @@
        "      <td>22</td>\n",
        "      <td>14</td>\n",
        "      <td>30</td>\n",
-       "      <td>0</td>\n",
        "      <td>...</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
@@ -313,6 +407,7 @@
        "      <th>3</th>\n",
        "      <td>2018-05-16 21:30:00</td>\n",
        "      <td>16-05-2018 21:30</td>\n",
+       "      <td>16-May-2018</td>\n",
        "      <td>2018-05-16</td>\n",
        "      <td>21:30:00</td>\n",
        "      <td>21:30:00</td>\n",
@@ -320,7 +415,6 @@
        "      <td>16</td>\n",
        "      <td>21</td>\n",
        "      <td>30</td>\n",
-       "      <td>0</td>\n",
        "      <td>...</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
@@ -337,13 +431,13 @@
        "      <th>4</th>\n",
        "      <td>2018-12-13 12:00:00</td>\n",
        "      <td>13-12-2018 12:00</td>\n",
+       "      <td>13-Dec-2018</td>\n",
        "      <td>2018-12-13</td>\n",
        "      <td>12:00:00</td>\n",
        "      <td>12:00:00</td>\n",
        "      <td>12</td>\n",
        "      <td>13</td>\n",
        "      <td>12</td>\n",
-       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>...</td>\n",
        "      <td>False</td>\n",
@@ -359,23 +453,23 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 33 columns</p>\n",
+       "<p>5 rows × 34 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "     report_date_time report_date_time_2        Date      Time    Timetz  \\\n",
-       "0 2018-01-02 19:48:00   02-01-2018 19:48  2018-01-02  19:48:00  19:48:00   \n",
-       "1 2018-02-14 12:00:00   14-02-2018 12:00  2018-02-14  12:00:00  12:00:00   \n",
-       "2 2018-03-22 14:30:00   22-03-2018 14:30  2018-03-22  14:30:00  14:30:00   \n",
-       "3 2018-05-16 21:30:00   16-05-2018 21:30  2018-05-16  21:30:00  21:30:00   \n",
-       "4 2018-12-13 12:00:00   13-12-2018 12:00  2018-12-13  12:00:00  12:00:00   \n",
+       "     report_date_time report_date_time_2 formatted_date        Date      Time  \\\n",
+       "0 2018-01-02 19:48:00   02-01-2018 19:48    02-Jan-2018  2018-01-02  19:48:00   \n",
+       "1 2018-02-14 12:00:00   14-02-2018 12:00    14-Feb-2018  2018-02-14  12:00:00   \n",
+       "2 2018-03-22 14:30:00   22-03-2018 14:30    22-Mar-2018  2018-03-22  14:30:00   \n",
+       "3 2018-05-16 21:30:00   16-05-2018 21:30    16-May-2018  2018-05-16  21:30:00   \n",
+       "4 2018-12-13 12:00:00   13-12-2018 12:00    13-Dec-2018  2018-12-13  12:00:00   \n",
        "\n",
-       "   Month  Day  Hour  Minute  Second  ...  is_year_end  is_leap_year  \\\n",
-       "0      1    2    19      48       0  ...        False         False   \n",
-       "1      2   14    12       0       0  ...        False         False   \n",
-       "2      3   22    14      30       0  ...        False         False   \n",
-       "3      5   16    21      30       0  ...        False         False   \n",
-       "4     12   13    12       0       0  ...        False         False   \n",
+       "     Timetz  Month  Day  Hour  Minute  ...  is_year_end  is_leap_year  \\\n",
+       "0  19:48:00      1    2    19      48  ...        False         False   \n",
+       "1  12:00:00      2   14    12       0  ...        False         False   \n",
+       "2  14:30:00      3   22    14      30  ...        False         False   \n",
+       "3  21:30:00      5   16    21      30  ...        False         False   \n",
+       "4  12:00:00     12   13    12       0  ...        False         False   \n",
        "\n",
        "   daysinmonth   period  strftime               Round               Floor  \\\n",
        "0           31  2018-01       Tue 2018-01-02 20:00:00 2018-01-02 19:00:00   \n",
@@ -391,10 +485,10 @@
        "3 2018-05-16 22:00:00         May  Wednesday  \n",
        "4 2018-12-13 12:00:00    December   Thursday  \n",
        "\n",
-       "[5 rows x 33 columns]"
+       "[5 rows x 34 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
