--- a/2_datetime_excel.ipynb
+++ b/2_datetime_excel.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "id": "082676cf-3310-40c4-8ada-e9f894595e47",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "id": "8f7b478e-e096-47c1-b8ac-272323f4c960",
    "metadata": {},
    "outputs": [
@@ -81,7 +81,7 @@
        "4  13-12-2018 12:00   13-12-2018 12:00"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -92,7 +92,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
+   "id": "71067670-5b27-4a52-b51e-f8cc290d6671",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in df['report_date_time_2']:\n",
+    "    print(i)\n",
+    "    if df['report_date_time_2'].index = 0:\n",
+    "    print(i+1) i have a dataframe df['report_date_time_2'] "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "ceb67c2f-8d03-42cf-9198-a83ad9f4a0ef",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Indexes with format '%A-%m-%d-%Y %H:%M': []\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Define the date formats\n",
+    "format1 = '%A-%m-%d-%Y %H:%M'\n",
+    "format2 = '%d-%m-%Y %H:%M'\n",
+    "\n",
+    "# Find the indexes with the specific format\n",
+    "indexes_format1 = []\n",
+    "\n",
+    "for idx, date_str in enumerate(df['report_date_time_2']):\n",
+    "    try:\n",
+    "        # Try to parse with format1\n",
+    "        pd.to_datetime(date_str, format=format1)\n",
+    "        indexes_format1.append(idx)\n",
+    "    except ValueError:\n",
+    "        # If it fails, it's not format1\n",
+    "        continue\n",
+    "\n",
+    "print(\"Indexes with format '%A-%m-%d-%Y %H:%M':\", indexes_format1)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "id": "33ec211b-c595-4af0-8afc-b416c981405e",
    "metadata": {},
    "outputs": [],
@@ -225,6 +272,16 @@
     "print(error_rows)\n",
     "\n",
     "df.to_csv('Aardra_2.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "56f6482a-c017-4f1e-992c-c4196d96ed65",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['report_date_time_2'].loc[109]"
    ]
   },
   {
